# rusty-13-ways-of-looking-at-a-turtle

./: Cargo.toml  README.md
examples/: 01-oo-turtle.rs  02-fp-turtle.rs  03-api-oo-core.rs
src/: common.rs  fp_turtle.rs  fp_utils.rs  lib.rs  oo_phantom_turtle.rs  oo_turtle.rs
tests/: oo_phantom_turtle.rs  oo_turtle.rs
